# ma-thesis-ce-fc

./: .gitignore  .gitmodules  AGENTS.md  README.md  pyproject.toml  pytest.ini
.clinerules/: workspace-rules.md
.github/: copilot-instructions.md
.github/chatmodes/: Implementation Planning.chatmode.md  Plan Mode.chatmode.md  Research Mode.chatmode.md  Test Implementation.chatmode.md
cache/: tool_cache.db
datasets/: README.md
documentation/: architecture.md
evaluation/: BenchmarkAdapter.py  TaskAdapter.py  config.toml  config_utils.py  eval_mcpbench.py  eval_nestful.py  evaluate_nestful.sh  mcpbench_adapter.py  nestful_adapter.py  orchestrator.py  registries.py  results.py  run_evaluation.py
evaluation/mcp_bench/: commands.json  commands_short_working.json  eval_mcpbench.py  mcpbench_adapter.py
evaluation/nestful/: eval_nestful.py  execute_nestful.sh  nestful_adapter.py
memory/: BaseMemory.py  base.py  registry.py
memory/methods/: truncation_memory.py
models/: BaseModel.py  base.py  registry.py
models/providers/: ollama.py  openrouter.py
tests/unit/: test_base_memory.py  test_base_model.py  test_component_registry.py  test_dynamic_model_catalog.py  test_evaluation_orchestrator.py  test_mcpbench_adapter.py  test_mcpbench_adapter_config_only.py  test_mcpbench_config_parsing.py  test_mcpbench_integration.py  test_memory_registry.py  test_memory_truncation.py  test_providers_ollama.py  test_results_storage.py
