[project]
name = "context-engineering-for-improved-tool-use"
version = "0.1.0"
description = "Research framework for improving tool-using LLM agents with context engineering"
authors = [
    {name = "Maximilian Graf"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "ollama>=0.6.0",
    "pydantic>=2.12.3",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "python-dotenv>=1.2.1",
]
